--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     >
-    <!-- script -->
-    <script async src="script.js"></script>
+
 </head>
 <body>
     <h1 class="happy-birthday">Happy Birthday</h1>
     <p class="wishes">Tuổi mới nhiều sức khỏe, niềm vui và thành công nhé. Iu anh &#x2764;</p>
     <p class="from-thespacebard">From Hổ con, with love &#x1F42F;</p>
     <canvas id="birthday"></canvas>
+    <!-- script -->
+    <script src="script.js"></script>
 </body>
 </html>
