added typewriter effect so that it looks fancy

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
     <h1 class="happy-birthday">Happy Birthday</h1>
-    <p class="wishes">Tuổi mới nhiều sức khỏe, niềm vui và thành công nhé. Iu anh &#x2764;</p>
-    <p class="from-thespacebard">From Hổ con, with love &#x1F42F;</p>
+    <p>Tuổi mới nhiều sức khỏe, niềm vui và thành công nhé. Iu anh &#x2764;</p>
+    <p>From Hổ con, with love &#x1F42F;</p>
     <canvas id="birthday"></canvas>
     <!-- script -->
     <script src="script.js"></script>
