--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Happy Birthday!</title>
     <!-- Google Font -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
         rel="stylesheet"
     />
     <!-- Stylesheet -->
