--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Font Hack-->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
-    <script async src="script.js"></script>
 </head>
 <body>
     <h1 class="happy-birthday">Happy Birthday</h1>
@@ -23,5 +22,6 @@
     <br></br>
     <p>From: Hổ con &#x1F42F;</p>
     <canvas id="canvas"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
