--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         rel="stylesheet"
     />
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
+    <!-- script -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1 class="happy-birthday">Happy Birthday</h1>
@@ -20,6 +22,5 @@
     <br></br>
     <p>From: Hổ con &#x1F42F;</p>
     <canvas id="canvas"></canvas>
-    <script src="script.js"></script>
 </body>
 </html>
