remove defer script.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css"/>
     <!-- script -->
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1 class="happy-birthday">Happy Birthday</h1>
