added class night-sky to current canvas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0">
     <title>Watching the stars with you!</title>
     <!-- Google Font -->
     <link
@@ -21,6 +21,6 @@
     <p>01001001 01110101 00100000 01100001 01101110 01101000 00100000 11110000 10011111 10011000 10011111</p>
     <br></br>
     <p>From: Hổ con &#x1F42F;</p>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" class="night-sky"></canvas>
 </body>
 </html>
