--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
         rel="stylesheet"
     />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+        rel="stylesheet"
+    />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css"/>
     <!-- script -->
