--- a/index.html
+++ b/index.html
@@ -16,15 +16,26 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css"/>
     <!-- script -->
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 class="happy-birthday">Happy Birthday</h1>
+    <button id="theme-toggle" aria-label="Switch to day theme">
+        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 472 472">
+            <g class="toggle-sun">
+                <path d="M403.21,167V69.18H305.38L236.2,0,167,69.18H69.18V167L0,236.2l69.18,69.18v97.83H167l69.18,69.18,69.18-69.18h97.83V305.38l69.18-69.18Zm-167,198.17a129,129,0,1,1,129-129A129,129,0,0,1,236.2,365.19Z" />
+            </g>
+            <g class="toggle-circle">
+                <circle class="cls-1" cx="236.2" cy="236.2" r="103.78" />
+            </g>
+        </svg>
+    </button>
+
+    <h1>Happy Birthday</h1>
     <br></br>
     <p>Tuổi mới nhiều sức khỏe, niềm vui và thành công nhé!</p>
     <p>01001001 01110101 00100000 01100001 01101110 01101000 00100000 11110000 10011111 10011000 10011111</p>
     <br></br>
     <p>From: Hổ con &#x1F42F;</p>
-    <canvas id="canvas" class="night-sky"></canvas>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
