--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Watching the stars with you!</title>
+    <title>Happy birthday from Thespacebard <3</title>
     <!-- Google Font -->
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
